# NanikaTukuru

./: .gitignore  README.md  index.html
css/: styles.css
docs/: agent-log.md  企画書.md
godot/: README.md  export_presets.cfg  icon.svg.import  project.godot
godot/scenes/: main.tscn
godot/scripts/: audio_lab.gd  audio_lab.gd.uid  main.gd  main.gd.uid  visualizer.gd  visualizer.gd.uid
js/: audio-lab.js  main.js  visualizer.js
juce/: CMakeLists.txt  README.md
juce/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeComponent.cpp  ScopeComponent.h
